<resources>
    <string name="app_name">Merchant</string>
    <string name="str_rzxy">入驻协议</string>
    <string name="str_hint1">&#8195;&#8195;第二条订立本协议的目的在于确保甲、乙双方忠实地履行本协议规定的双方的职责和权利。乙方作为单独的企业法人或经营者进行经济活动。因此，他必须遵守对所 有企业法人或经营者共同的法律要求，特别是有关资格的规则以及社会的、财务的商业要求。作为一个企业法人或经营者，乙方应就其活动自负一切风险和从合法经 营中获利。乙方不是甲方的代理人，也不是甲方的雇员和合伙人。乙方不是作为甲方委托代表，乙方无权以甲方的名义签定协议，使甲方在任何方面对第三人承担责 任，或由甲方负担费用，承担任何义务。订立本协议并未授予乙方任何约束甲方或甲方有关企业之权利，甲方对本协议任何条款有最终的解释权</string>
    <string name="app_ty">同意</string>
    <string name="str_rzsq">入驻申请</string>
    <string name="str_hint2">营业执照的姓名需和身份证信息一致</string>
    <string name="str_xyb">下一步</string>
    <string name="str_shxx">商户信息</string>
    <string name="str_shlx">商户类型：</string>
    <string name="str_qxzshlx">请选择商户类型</string>
    <string name="str_jylx">经营类型：</string>
    <string name="str_qxzjylx">请选择经营类型</string>
    <string name="str_xcy">宣传语：</string>
    <string name="str_qsrxcy">请输入宣传语</string>
    <string name="str_qrxx">确认信息</string>
    <string name="str_xm">姓名：</string>
    <string name="str_sfzh">身份证号：</string>
    <string name="str_yzxx">业主信息</string>
    <string name="str_shmc">商户名称：</string>
    <string name="str_jyz">经营者：</string>
    <string name="str_yysj">营业时间：</string>
    <string name="str_dpwz">商铺位置：</string>
    <string name="str_shenqing">申请</string>
    <string name="str_sd">商店</string>
    <string name="str_splb">商品类别</string>
    <string name="str_yp">饮品</string>
    <string name="str_qtsz">其他设置</string>
    <string name="str_hint">提示：</string>
    <string name="str_zpyz">自拍一张</string>
    <string name="str_syxc">使用相册</string>
    <string name="str_xzwj">选择文件</string>
    <string name="str_pz">拍照</string>
    <string name="str_xc">相册</string>
    <string name="str_sccg">上传成功</string>
    <string name="str_sp">商品</string>
</resources>
