<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/d10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.zhy.android.percent.support.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/d13"
                        android:paddingLeft="@dimen/d13"
                        android:paddingTop="@dimen/d13"
                        android:text="@string/str_shlx"
                        android:textColor="@color/color_666666"
                        android:textSize="@dimen/d13" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/str_qxzshlx"
                        android:paddingBottom="@dimen/d13"
                        android:paddingLeft="@dimen/d5"
                        android:paddingTop="@dimen/d13"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/d13" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginRight="@dimen/d13"
                        android:src="@mipmap/ic_arrows_bottom"
                        app:layout_heightPercent="4%w"
                        app:layout_widthPercent="4%w" />
                </com.zhy.android.percent.support.PercentLinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/color_f0f0f0" />

                <com.zhy.android.percent.support.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/d13"
                        android:paddingLeft="@dimen/d13"
                        android:paddingTop="@dimen/d13"
                        android:text="@string/str_jylx"
                        android:textColor="@color/color_666666"
                        android:textSize="@dimen/d13" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/str_qxzjylx"
                        android:paddingBottom="@dimen/d13"
                        android:paddingLeft="@dimen/d5"
                        android:paddingTop="@dimen/d13"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/d13" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginRight="@dimen/d13"
                        android:src="@mipmap/ic_arrows_bottom"
                        app:layout_heightPercent="4%w"
                        app:layout_widthPercent="4%w" />
                </com.zhy.android.percent.support.PercentLinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/color_f0f0f0" />

                <com.zhy.android.percent.support.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.junshan.pub.widget.ClearEditText
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_marginBottom="@dimen/d13"
                        android:layout_marginLeft="@dimen/d13"
                        android:layout_marginRight="@dimen/d13"
                        android:layout_marginTop="@dimen/d10"
                        android:layout_weight="1"
                        android:background="@drawable/shape_grap"
                        android:gravity="center|left|top"
                        android:hint="@string/str_qsrxcy"
                        android:padding="@dimen/d10"
                        android:paddingBottom="@dimen/d13"
                        android:paddingLeft="@dimen/d5"
                        android:paddingTop="@dimen/d13"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/d13" />
                </com.zhy.android.percent.support.PercentLinearLayout>

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/d30"
                    android:background="@drawable/shape_blue"
                    android:text="@string/str_xyb"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/d14" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</layout>