<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_f4f4f4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/d10"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/d12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/d12"
                    android:paddingLeft="@dimen/d5"
                    android:text="@string/str_yzxx"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/d15" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/color_f0f0f0" />

                <com.zhy.android.percent.support.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d12"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/d12">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/d12"
                        android:paddingLeft="@dimen/d12"
                        android:paddingTop="@dimen/d12"
                        android:text="@string/str_xm"
                        android:textColor="@color/color_666666"
                        android:textSize="@dimen/d13" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/d13"
                        android:paddingLeft="@dimen/d5"
                        android:paddingTop="@dimen/d13"
                        android:text="张海燕"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/d13" />
                </com.zhy.android.percent.support.PercentLinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/color_f0f0f0" />

                <com.zhy.android.percent.support.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d12"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/d13">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/d12"
                        android:paddingLeft="@dimen/d12"
                        android:paddingTop="@dimen/d12"
                        android:text="@string/str_sfzh"
                        android:textColor="@color/color_666666"
                        android:textSize="@dimen/d13" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/d12"
                        android:paddingLeft="@dimen/d5"
                        android:paddingTop="@dimen/d12"
                        android:text="44089283736653535X"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/d13" />
                </com.zhy.android.percent.support.PercentLinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/color_f0f0f0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/d10"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/d12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/d12"
                    android:paddingLeft="@dimen/d5"
                    android:text="@string/str_shxx"
                    android:textColor="@color/color_333333"
                    android:textSize="@dimen/d15" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/color_f0f0f0" />

                <com.zhy.android.percent.support.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d12"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/d12">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/d12"
                        android:paddingLeft="@dimen/d12"
                        android:paddingTop="@dimen/d12"
                        android:text="@string/str_shmc"
                        android:textColor="@color/color_666666"
                        android:textSize="@dimen/d13" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/d12"
                        android:paddingLeft="@dimen/d5"
                        android:paddingTop="@dimen/d12"
                        android:text="智慧小店"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/d13" />
                </com.zhy.android.percent.support.PercentLinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/color_f0f0f0" />

                <com.zhy.android.percent.support.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d12"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/d12">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/d12"
                        android:paddingLeft="@dimen/d12"
                        android:paddingTop="@dimen/d12"
                        android:text="@string/str_jyz"
                        android:textColor="@color/color_666666"
                        android:textSize="@dimen/d13" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/d13"
                        android:paddingLeft="@dimen/d5"
                        android:paddingTop="@dimen/d13"
                        android:text="张海燕"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/d13" />
                </com.zhy.android.percent.support.PercentLinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/color_f0f0f0" />

                <com.zhy.android.percent.support.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d12"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/d13">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/d12"
                        android:paddingLeft="@dimen/d12"
                        android:paddingTop="@dimen/d12"
                        android:text="@string/str_yysj"
                        android:textColor="@color/color_666666"
                        android:textSize="@dimen/d13" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/d12"
                        android:paddingLeft="@dimen/d5"
                        android:paddingTop="@dimen/d12"
                        android:text="8:00~22:00"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/d13" />
                </com.zhy.android.percent.support.PercentLinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/color_f0f0f0" />

                <com.zhy.android.percent.support.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d12"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/d13">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/d12"
                        android:paddingLeft="@dimen/d12"
                        android:paddingTop="@dimen/d12"
                        android:text="@string/str_dpwz"
                        android:textColor="@color/color_666666"
                        android:textSize="@dimen/d13" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/d12"
                        android:paddingLeft="@dimen/d5"
                        android:paddingTop="@dimen/d12"
                        android:text="深圳市及科技基金可敬可嘉"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/d13" />
                </com.zhy.android.percent.support.PercentLinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:background="@color/color_f0f0f0" />

                <com.zhy.android.percent.support.PercentLinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d12"
                    android:background="@color/white"
                    android:gravity="center|top"
                    android:orientation="horizontal"
                    android:paddingRight="@dimen/d12">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/d12"
                        android:paddingLeft="@dimen/d12"
                        android:paddingTop="@dimen/d12"
                        android:text="@string/str_xcy"
                        android:textColor="@color/color_666666"
                        android:textSize="@dimen/d13" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/d12"
                        android:paddingLeft="@dimen/d5"
                        android:paddingTop="@dimen/d12"
                        android:text="第三方水电费水电费水电费是生生世世会被和和美美尼玛尼玛"
                        android:textColor="@color/color_666666"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/d13" />
                </com.zhy.android.percent.support.PercentLinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="@dimen/d20"
                android:layout_marginLeft="@dimen/d30"
                android:layout_marginRight="@dimen/d30"
                android:layout_marginTop="@dimen/d20"
                android:background="@drawable/btn_theme"
                android:text="@string/str_shenqing"
                android:textColor="@color/white"
                android:textSize="@dimen/d14" />
        </LinearLayout>
    </ScrollView>

</layout>